# fastapigql

./: .env.example  main.py  pyproject.toml  readme.md  requirements.txt
app/: Auth.py  application.py  mutator.py  queries_schema.py  schema.py  start.py
app/mutations/: UserMutate.py
app/serializers/: AccountSerialize.py  UserSerialize.py
configs/: application.py  database.py
migrations/: 2021_02_16_145104_create_users_table.py  2021_02_19_092741_create_profiles_table.py  2021_02_19_093301_create_accounts_table.py  2021_02_19_093708_create_businesses_table.py
models/: account.py  business.py  profile.py  user.py
