[tool.poetry]
name = "fastapigql"
version = "0.1.1"
description = "fastapi with graphQL as main function"
authors = ["Muhammad Abdurrahman <rachman.sd@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
fastql-packages = "orator"
orator = "^0.9.9"
python-dotenv = "^0.17.1"
graphene-pydantic = "^0.2.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
